--- a/20141030.html
+++ b/20141030.html
@@ -14,11 +14,10 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body class="text-center bg-success">
 	<div class="container">
 	<div id="new-1" class="article">
-	     hello world
-	</div>
+	</div>   
 	<marquee><h1>我要吃蛋塔!!!!!!</h1></marquee>
 	<h1>好餓喔~</h1>
 	<h2>今晚消夜吃什麼咧~~?</h2>
@@ -26,8 +25,14 @@
 	<h4>鹹酥雞~</h4>
 	<h5>滷味~</h5>
 	<h6>關東煮~</h6>
-	<h2>最重要的當然是....</h2>
+	<em class="text-center"><h2>最重要的當然是....</h2></em>
 	<h1>肯德基蛋塔!!!!!!</h1>
+	<button type="button" class="btn btn-default">離散雷爆了!!</button>
+	<button type="button" class="btn btn-primary">微積分也很雷</button>
+	<button type="button" class="btn btn-success">普物功課超多</button>
+	<button type="button" class="btn btn-info">普物實驗很機車!</button>
+	<button type="button" class="btn btn-warning">肚子</button>
+	<button type="button" class="btn btn-danger">好餓</button>
 	 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	 <script src="https://cdn.jsdelivr.net/bootstrap/3.3.0/js/bootstrap.min.js"></script>  
 </body>
