--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=640">
-    <title>Hong-cai-yi.github.io by HONG-CAI-YI</title>
+    <title>HongCaiYi.github.io by HongCaiYi</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   </head>
+<body style="background-image:url('https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10671290_515651078537418_5404350703316798724_n.jpg?oh=93ca50d67c208a09f46bbf1e919ba53c&amp;oe=54F5FCBB&amp;__gda__=1423767911_1c35f4bd73a072b48d02779c6a793a37');background-repeat:no-repeat;background-size: cover">
+<marquee>
+<h2>~~立志吃遍全台美食~~</h2>
+</marquee>
 
-  <body>
+</body>
 
-  </body>
 </html>
