變更背景圖片

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   </head>
-<body style="background-image:url('https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/10671290_515651078537418_5404350703316798724_n.jpg?oh=93ca50d67c208a09f46bbf1e919ba53c&amp;oe=54F5FCBB&amp;__gda__=1423767911_1c35f4bd73a072b48d02779c6a793a37');background-repeat:no-repeat;background-size: cover">
+<body style="http://d.blog.xuite.net/d/0/e/a/21677696/blog_1946335/txt/30180862/4.jpg">
 <marquee>
 <h2>~~立志吃遍全台美食~~</h2>
 </marquee>
