--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   </head>
-<body background="http://d.blog.xuite.net/d/0/e/a/21677696/blog_1946335/txt/30180862/4.jpg">
+<body>
 
 
 </body>
